# corobot-kinetic

./: .gitignore  INSTALL.md  README.md  STARTUP.md
corobot_bringup/: CMakeLists.txt  apps.launch  freenect-registered-xyzrgb.launch  left.launch  package.xml  particlefilter.launch  right.launch  robot_base.launch
corobot_common/: CMakeLists.txt  package.xml  setup.py
corobot_common/msg/: Target.msg
corobot_controller/: CMakeLists.txt  package.xml
corobot_coop/: CMakeLists.txt  package.xml
corobot_coop/src/: viewImage.py
corobot_face_recognition/: .gitignore
corobot_face_recognition/src/: face_rec.cpp
corobot_localization/: CMakeLists.txt  package.xml
corobot_localization/src/: PFLocalizationNode.cpp  ParticleFilter.cpp  ParticleFilter.h  ekf.py  kinect_loc.py  localization.py  particle.py  pf_haonan.py
corobot_manager/: CMakeLists.txt  package.xml
corobot_manager/src/: corobot_ui.py  manage.py  monitor.py
corobot_map/: CMakeLists.txt  package.xml
corobot_navigation/: CMakeLists.txt  package.xml
corobot_navigation/src/: nav.py
corobot_obstacle_avoidance/: CMakeLists.txt  package.xml
corobot_obstacle_avoidance/include/: apf.h  obstacle_avoidance.h  wall_detection.h
corobot_obstacle_avoidance/src/: apf.cpp  obstacle_avoidance.cpp  wall_detection.cpp  (+1 more)
corobot_odometry_logging/: CMakeLists.txt  package.xml
corobot_optical_flow/: CMakeLists.txt  package.xml
corobot_qrcode/: CMakeLists.txt  barcodePoints.csv  package.xml
corobot_visual_odometry/: CMakeLists.txt  package.xml
corobot_visual_odometry/src/: corobot_visual_odometry_node.cpp
(+15 files in other folders)
